--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,124 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,900;1,400;1,700;1,900&family=Luckiest+Guy&family=Poppins:ital,wght@0,600;0,700;0,900;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap');
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body{
+  font-family: "Lato",sans-serif;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+}
+.container{
+  width: 500px;
+  border: 1px solid #084594;
+  margin-top: 30px;
+  padding: 20px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+
+}
+header{
+  display: flex;
+  justify-content: space-between;
+}
+header .logo h3{
+  font-size: 22px;
+  font-family: "Lato",sans-serif;
+  font-weight: 700;
+}
+header .btn{
+  padding:6px 10px;
+  font-size: 16px;
+  background-color: #3E7C17;
+  border: none;
+  outline: none;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
   text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.wrapper{
+  margin-top: 20px;
+ 
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper .tasks{
+  list-style: none;
+}
+.wrapper .tasks .task{
+  font-size: 19px;
+  background-color: #f4f4f4;
+  margin-top: 10px;
+  padding: 10px 20px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  cursor: pointer;
+}
+.wrapper .task .task span:first-child{
+  font-weight: 500;
+
+}
+.task span:last-child{
+  font-size: 17px;
+  color: #333;
+  margin-top: 5px;
+}
+.reminder{
+  border-left: 5px solid #3E7C17;
+}
+form{
+  margin-top: 20px;
+}
+form .form-group{
+  margin-top: 20px;
+}
+form .form-group:first-child{
+  margin-top: 0;
+}
+form .form-input{
+  margin-top: 20px;
+  /* display: flex; */
+  /* justify-content: space-between; */
+}
+form .form-group {
+  display: flex;
+  flex-direction: column;
+}
+form .form-group .form-control label{
+  font-family: "Lato",sans-serif;
+  font-size: 18px;
+}
+form .form-group .form-control{
+  height: 40px;
+  padding: 7px;
+  font-size: 15px;
+  font-family: "Lato",sans-serif;
+  margin-left: 5px;
+  margin-top: 5px;
+  /* background-color: #fff; */
+}
+form .form-group .form-control::placeholder{
+  font-size: 16px;
+}
+/* .form-input{
+  display: flex;
+} */
+.form-input label{
+  display: inline-block;
+  margin-right: 100px;
+  font-size: 18px;
+}
+.task-btn{
+  width: 100%;
+  margin-top: 20px;
+  padding: 5px 0;
+  text-align: center;
+  border: none;
+  background-color: #000;
+  color: #fff;
+  font-size: 15px;
+  border-radius: 5px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
